--- a/pets/pets.css
+++ b/pets/pets.css
@@ -9,38 +9,24 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
-    /* background-image: linear-gradient(cyan 0%, violet 100%); */
     color: white;
     height: 100%;
     background-repeat: no-repeat;
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ADB2B6', endColorstr='#ABAEB3', GradientType=0);
 }
 
-/* body::after {
-    content: "";
-    background-image: url("https://images.unsplash.com/photo-1553322378-eb94e5966b0c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2850&q=80");
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    opacity: 0.2;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    position: absolute;
-    z-index: -1;   
-} */
 
 main {
     display: grid;
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
+    /* backdrop-filter: blur(4px); */
 }
 
-.pet-card {
-    text-align: center;
-    background-color: #4d4d4d;
+.pet-card { 
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(2px);
+    text-align: center;    
     color: white;
     width: 350px;
     padding: 10px;
@@ -48,13 +34,13 @@ main {
     box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
     z-index: 20;
-    /* flex-flow: wrap; */
     flex-direction: row;
     justify-content: center;
     align-items: center;
 }
 
 .attributes {
+    color: black;
     padding-inline-start: 0px;
     list-style-type: none;
     justify-content: center;
