--- a/app.css
+++ b/app.css
@@ -5,9 +5,13 @@ body {
     font-family: 'Josefin Sans', 'sans-serif';
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-image: linear-gradient(cyan 0%, violet 100%);
+    background-image: url("https://media2.s-nbcnews.com/i/newscms/2016_43/1169669/girl-dog-1-today-101626-tease_e3ef43e4afd3d5bd4b4379a64dadff3f.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
     color: white;
-    height: 750px;
+    height: 100vh;
+    width: 100vw;
     background-repeat: no-repeat;
 }
 
@@ -16,21 +20,50 @@ body {
     margin-bottom: 0;
 }
 
-.bar {
+.line, .bar, .submit, .footer-items {
     border-radius: 25px;
     font-family: 'Josefin Sans', 'sans-serif';
-    height: 22px
+    height: 22px;
+    color: chocolate;
+}
+.bar, .footer-items {
+    text-shadow: 1px 1px black;
+    font-size: large;
+    font-weight: 800;
 }
 
-header {
-    display: flex;
+.label {
+    padding-right: 20px;
+}
+
+.user-forms {
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(15px);
+    text-align: center;    
+    color: white;
+    width: 600px;
+    padding: 10px;
+    margin: 1rem;
+    box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
+    border-radius: 5px;
+    z-index: 20;
+    flex-direction: row;
     justify-content: center;
-    align-self: flex-end;
+    align-items: center;
+    border-radius: 30px;
+}
+
+#header {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: chocolate;
 }
 
 .em {
-    padding-left: 5px;
-    padding-right: 7px;
+    padding-left: 10px;
+    padding-right: 10px;
     font-style: italic;
     font-weight: 300;
 }
@@ -44,10 +77,18 @@ header {
     display: flex;
     font-size: 120px;
     margin-bottom: 0;
+    margin-top: 30px;
+    text-shadow: 4px 4px black;
 }
 
-.slogan {
+#header .slogan {
     display: flex;
+    text-shadow: 2px 2px black;
+    position: relative;
+    left: 155px;
+    font-weight: 700;
+    font-size: x-large;
+    margin-top: 8px;
 }
 
 main {
@@ -55,18 +96,11 @@ main {
     justify-content: center;
     align-items: center;
     padding-top: 100px;
-}
-
-#header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: chocolate;
+    padding-bottom: 200px;
 }
 
 .new-user {
-    padding-top: 10px;
+    padding-top: 30px;
 }
 
 .hidden-input {
@@ -74,15 +108,18 @@ main {
 }
 
 footer {
-    height: 200px;
-    padding-top: 50px;
+    align-self: center;
+    height: 100px;
     display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: row;
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(1px);
+    box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
+    border-radius: 5px;
 }
 
-.footer-items {
-    padding-right: 20px;
-    padding-bottom: 20px;
+footer .footer-items {
+    font-size: 22px;
 }
