--- a/user/user.css
+++ b/user/user.css
@@ -47,7 +47,7 @@ body {
 
 .history-header-items {
     color: chocolate;
-    text-shadow: 2px 2px black;
+    text-shadow: 1px 1px black;
 }
 
 #header .slogan {
@@ -65,6 +65,7 @@ main {
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
+    padding-bottom: 50px;
 }
 
 .pet-card { 
@@ -114,9 +115,36 @@ footer {
     backdrop-filter: blur(1px);
     box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
+    bottom: 0;
+    position: absolute;
+    width: 100%;
+}
+
+p {
+    font-size: 18px;
+}
+
+.link {
+    text-decoration: none;
+}
+
+a {
+    color: chocolate
 }
 
 a:visited {
+    color: chocolate;
+}
+
+.pet-card h3 {
+    text-shadow: 2px 2px black;
+    font-weight: 800;
+    font-size: xx-large;
+    margin: 20px;
+    padding-inline-start: 0px;
+    list-style-type: none;
+    justify-content: center;
+    align-items: center;
     color: chocolate;
 }
 
