--- a/user/user.css
+++ b/user/user.css
@@ -38,16 +38,34 @@ body {
     font-weight: 300;
 }
 
-.history-header {
+.history-header-container {
     display: flex;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
+.history-header {
+    background-color: rgba(255, 255, 255, .15);  
+    backdrop-filter: blur(15px);
+    text-align: center;    
+    width: 600px;
+    padding: 10px;
+    margin: 1rem;
+    box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
+    border-radius: 5px;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    border-radius: 30px;
+}
+
 .history-header-items {
+    font-family: 'Josefin Sans', 'sans-serif';
     color: chocolate;
     text-shadow: 1px 1px black;
+    font-size: x-large;
+    font-weight: 800;
+    text-align: center;
 }
 
 #header .slogan {
@@ -61,24 +79,21 @@ body {
 }
 
 main {
-    display: flex;
+    display: grid;
     grid-template-columns: 400px 400px 400px;
     justify-content: center;
     align-items: center;
-    padding-bottom: 50px;
 }
 
 .pet-card { 
     background-color: rgba(255, 255, 255, .15);  
     backdrop-filter: blur(12px);
     text-align: center;    
-    color: white;
     width: 350px;
     padding: 10px;
     margin: 1rem;
     box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
-    z-index: 20;
     flex-direction: row;
     justify-content: center;
     align-items: center;
@@ -115,9 +130,6 @@ footer {
     backdrop-filter: blur(1px);
     box-shadow: 7px 10px 12px -5px rgba(0, 0, 0, 0.56);
     border-radius: 5px;
-    bottom: 0;
-    position: absolute;
-    width: 100%;
 }
 
 p {
