adds author's linked-in to footer

--- a/app.css
+++ b/app.css
@@ -132,3 +132,8 @@ a {
     color: chocolate
 }
 
+.footer-items .authors a{
+    color: chocolate;
+    font-size: 14px;
+    text-decoration: none;
+}
